--- a/meshio-example.ipynb
+++ b/meshio-example.ipynb
@@ -32,12 +32,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "Error",
+     "evalue": "Activating Python 3.7.6 64-bit ('base': conda) to run Jupyter failed with Error: StdErr from ShellExec, ERROR: The system was unable to find the specified registry key or value.\r\nERROR: The system was unable to find the specified registry key or value.\r\nThe system cannot find the path specified.\r\n.",
+     "traceback": [
+      "Error: Activating Python 3.7.6 64-bit ('base': conda) to run Jupyter failed with Error: StdErr from ShellExec, ERROR: The system was unable to find the specified registry key or value.",
+      "ERROR: The system was unable to find the specified registry key or value.",
+      "The system cannot find the path specified.",
+      ".",
+      "at A.checkUsable (c:\\Users\\nakai\\.vscode\\extensions\\ms-python.python-2020.2.64397\\out\\client\\extension.js:1:794715)"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np\n",
-    "import meshio"
+    "import numpy as np\nimport meshio"
    ]
   },
   {
