--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -27,18 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "Error",
+     "evalue": "Activating Python 3.7.6 64-bit ('base': conda) to run Jupyter failed with Error: StdErr from ShellExec, ERROR: The system was unable to find the specified registry key or value.\r\nERROR: The system was unable to find the specified registry key or value.\r\nThe system cannot find the path specified.\r\n.",
+     "traceback": [
+      "Error: Activating Python 3.7.6 64-bit ('base': conda) to run Jupyter failed with Error: StdErr from ShellExec, ERROR: The system was unable to find the specified registry key or value.",
+      "ERROR: The system was unable to find the specified registry key or value.",
+      "The system cannot find the path specified.",
+      ".",
+      "at A.checkUsable (c:\\Users\\nakai\\.vscode\\extensions\\ms-python.python-2020.2.64397\\out\\client\\extension.js:1:794715)"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np\n",
-    "import vtk\n",
-    "from vtk.util.numpy_support import vtk_to_numpy\n",
-    "\n",
-    "reader = vtk.vtkXMLUnstructuredGridReader()\n",
-    "reader.SetFileName(\"pep1_7_OmegaV.vtu\")\n",
-    "reader.Update()\n",
-    "data = reader.GetOutput()"
+    "import numpy as np\nimport vtk\nfrom vtk.util.numpy_support import vtk_to_numpy\n\nreader = vtk.vtkXMLUnstructuredGridReader()\nreader.SetFileName(\"pep1_7_OmegaV.vtu\")\nreader.Update()\ndata = reader.GetOutput()"
    ]
   },
   {
